--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Cinemato</string>
+    <string name="current_movies">Now Playing</string>
+    <string name="upcoming_movies">Upcoming</string>
 </resources>
